# egui_animate

./: Cargo.toml
examples/: menu.rs  showcase.rs  variable.rs
src/: lib.rs  mem.rs  state.rs
