[package]
name = "egui_animate"
authors = ["Christopher Edward Dawn"]
version = "0.2.0"
edition = "2024"
description = "Custom egui animations and transitions"
readme = "README.md"
repository = "https://github.com/cedtwo/egui_animate.git"
license = "MIT OR Apache-2.0"
keywords = ["egui", "animate", "animation", "transition"]
categories = ["gui", "game-development"]

[dependencies]
egui = "0.32.0"

[dev-dependencies]
eframe = "0.32.0"
